projects/compiler/test/typechecker/match/error_destructuring_type.out
Error at %FILE_NAME%:3:7
Destructuring is not supported for types in match cases (aside from enum variants)
  |    Int(x) => 4
           ^
