projects/compiler/test/typechecker/match/error_destructuring_type.abra
val a = 123
val x = match a {
  Int(x) => 4
}